# gmail-assistant

./: .gitignore  .mcp.json  README.md  context.example.toml  context_config.py  gmail_api.py  gmail_cache.py  gmail_helpers.py  gmail_school.py  main.py  pyproject.toml  server.py
docs/: PLAN.md  TODOs.md  v0.2-school-emails.md  v0.2b-email-cleanup.md  v0.3-email-cache.md  v0.4-skills-restructure.md  v0.5-school-summary-triage.md  v0.5-validation-harness.md  v0.6-school-summary-triage.md
mcp/: gmail_auth.py  gmail_cache.py  gmail_helpers.py  gmail_list.py  server.py
mcp/tests/: conftest.py  test_api.py  test_cache.py  test_list.py  test_server.py
prompts/: school_summary.md
skills/school-emails/: SKILL.md  context.example.toml  prompt.md
tests/: test_api.py  test_auth.py  test_context_config.py  test_helpers.py  test_school.py  test_server.py
